src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_4_errors.snap
---
source: src/parser/test.rs
description: le a = 1;
expression: "parser_errors(\"le a = 1;\", errors)"
---
le a = 1;
     ^ SyntaxError: Unexpected '='.
